--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Mangto REST API implementation in PHP",
     "version": "0.0.1",
     "require": {
-        "guzzlehttp/guzzle": "5.0.3"
+        "guzzlehttp/guzzle": "5.0.3",
+        "symfony/http-foundation": "~2.5"
     },
     "require-dev": {
         "phpunit/phpunit": "4.3.4",
