--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "version": "0.0.1",
     "require": {
         "guzzlehttp/guzzle": "5.0.3",
-        "symfony/http-foundation": "~2.5"
+        "symfony/http-foundation": "~2.5",
+        "guzzlehttp/oauth-subscriber": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "4.3.4",
@@ -17,7 +18,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Vdbf\\Magento\\Tests": "tests/"
+            "Vdbf\\Magento\\Tests\\": "tests/"
         }
     }
 }
